--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "npm run build && node dist/src/main.js",
     "build": "tsc",
     "pretest": "npm run build",
     "test": "mocha dist/test"
